--- a/contactus.html
+++ b/contactus.html
@@ -13,9 +13,9 @@
     <nav id="navbar">
         <!-- <img src="img/logo.png" alt=""> -->
         <div id="menuContainer">
-            <a href="/index.html"><h4>Home</h4></a>
-            <a href="/services/services.html"><h4>Services</h4></a>
-            <a href="/aboutus.html"><h4>About us</h4></a>
+            <a href="index.html"><h4>Home</h4></a>
+            <a href="services/services.html"><h4>Services</h4></a>
+            <a href="aboutus.html"><h4>About us</h4></a>
             <a href=""><h4>Contact us</h4></a>
             
         </div>
@@ -39,6 +39,41 @@
             <input type="text" placeholder="Message" id="message" name="message">
             <input type="Submit" placeholder="Submit" onclick="sendMessage();">
         </div>
+    </section>
+    <section id="footer">
+        <div class="upperFooter">
+            <div class="footerSections">
+            <h1><span style="border-bottom: 2px solid lightgreen;padding-bottom:1%;">VIRTU</span>O BOOST </h1>
+            <p>Navigating Success Through Digital Marketing Expertise</p>
+            </div>
+            <div class="footerSections">
+                <h1>QUICK LINKS</h1>
+                <div>
+                    <a href="services/services.html"><p>Our Services</p></a>
+                    <a href="contactus.html"><p>Contact Us</p></a>
+                    <a href="aboutus.html"><p>About Us</p></a>
+                </div>
+            </div>
+            <div class="footerSections">
+                <h1> SOCIAL MEDIA </h1>
+                <div id="socialLinks">
+                    <a href=""><img src="img/instagram.png" alt=""></a>
+                    <a href=""><img src="img/facebook.png" alt=""></a>
+                    <a href=""><img src="img/twitter.png" alt=""></a>
+                </div>
+            </div>
+            <div class="footerSections">
+                <h1>Contact</h1>
+                <div>
+                    <p>+91756374859</p>
+                    <p>info@virtuoboost.com</p>
+                    <p> © 2023 Virtuo boost. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="lowerFooter">
+           
+        </div> -->
     </section>
     <script>
         function sendMessage(){
