--- a/aboutus.html
+++ b/aboutus.html
@@ -55,9 +55,9 @@
                 <div class="footerSections">
                     <h1> SOCIAL MEDIA </h1>
                     <div id="socialLinks">
-                        <a href=""><img src="img/instagram.png" alt=""></a>
-                        <a href=""><img src="img/facebook.png" alt=""></a>
-                        <a href=""><img src="img/twitter.png" alt=""></a>
+                        <a href="https://instagram.com/virtuoboost?igshid=MzRlODBiNWFlZA=="><img src="img/instagram.png" alt=""></a>
+                        <a href="http://facebook.com/VituoBoost"><img src="img/facebook.png" alt=""></a>
+                        <a href="https://twitter.com/VirtuoBoost"><img src="img/twitter.png" alt=""></a>
                     </div>
                 </div>
                 <div class="footerSections">
