--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body onload="onMouseMove(); onBodyLoad();">
     <!-- <div id="minicircle"></div> -->
-    <div id="cursor"></div>
+    <!-- <div id="cursor"></div> -->
     <!-- <div id="cursorBlur"></div> -->
     <nav id="navbar">
         <!-- <img src="img/logo.png" alt=""> -->
@@ -193,8 +193,32 @@
         <div class="backgrounds webdBg">
             <div class="headingBgContainer">
                 <h1>WEBSITE <br><span>DEVEL</span>OPMENT</h1>
-                <p>There are millions of fish in the sea, but we only know about a small portion of them. Similarly there are many business owners on the market, but very few have succeeded in maintaining a positive reputation with their clients. You can stand out with the aid of our analytics team. This includes identification and optimization of website elements such as meta tags, headings, URLs, and content to make them more search engine-friendly and improves ranking potential.
-                    Additionally, it entails the use of analytical tools to track website metrics and to gather data on their competitors in order to offer improvement strategies.
+                <p>These days, having your own website has proven to be a huge benefit. A website acts as a manual for potential clients, providing all the necessary details about your company, its goods, and services. Our team of experts can assist you in enhancing the legitimacy and trustworthiness of your company in the eyes of customers. Which includes developing tailor-made websites from scratch, Refreshing and modernizing existing websites to improve user experience, and more. By providing these services we provide an insightful and hassle-free tour of your services to your potential clients.
+                    </p>
+                    <button>KNOW MORE...</button>
+            </div>
+        </div>
+        <div class="backgrounds socialBg">
+            <div class="headingBgContainer">
+                <h1>SOCIAL MEDIA<br><span>MANAG</span>EMENT</h1>
+                <p>social media is perhaps the easiest but trickiest method for a business to grow. Some team members at Virtuo Boost have perfected the art of increasing customer loyalty, brand recognition, and social media presence while also generating income. We typically provide a range of solutions to enhance your social media presence and performance. This involves regularly monitoring the social media platforms, executing paid campaigns, evaluating the success, and many more.
+                    </p>
+                    <button>KNOW MORE...</button>
+            </div>
+        </div>
+        
+        <div class="backgrounds graphicBg">
+            <div class="headingBgContainer">
+                <h1>GRAPHIC <br><span>DESIG</span>NING</h1>
+                <p>Every client is unique in every aspect. Each of them has a different brand personality, target audience, and marketing objectives. Our team of Graphic designers closely collaborates with the clients to understand their brand and ensures effective methods of communicating the brand’s message among the people to create an ever-lasting impact on the audience.
+                    </p>
+                    <button>KNOW MORE...</button>
+            </div>
+        </div>
+        <div class="backgrounds businessBg">
+            <div class="headingBgContainer">
+                <h1>BUSINESS <br><span>DEVEL</span>OPMENT</h1>
+                <p>It is a platform that works as an asset to individuals or businesses looking to navigate through the complexities of expansion and development. It helps you understand clients and identify growth opportunities that can work as an asset in expanding their market presence and achieving sustainable business growth and success.
                     </p>
                     <button>KNOW MORE...</button>
             </div>
@@ -209,41 +233,14 @@
             </div>
         </div>
         
-        <div class="backgrounds graphicBg">
-            <div class="headingBgContainer">
-                <h1>GRAPHIC <br><span>DESIG</span>NING</h1>
-                <p>There are millions of fish in the sea, but we only know about a small portion of them. Similarly there are many business owners on the market, but very few have succeeded in maintaining a positive reputation with their clients. You can stand out with the aid of our analytics team. This includes identification and optimization of website elements such as meta tags, headings, URLs, and content to make them more search engine-friendly and improves ranking potential.
-                    Additionally, it entails the use of analytical tools to track website metrics and to gather data on their competitors in order to offer improvement strategies.
-                    </p>
-                    <button>KNOW MORE...</button>
-            </div>
-        </div>
-        <div class="backgrounds businessBg">
-            <div class="headingBgContainer">
-                <h1>BUSINESS <br><span>DEVEL</span>OPMENT</h1>
-                <p>There are millions of fish in the sea, but we only know about a small portion of them. Similarly there are many business owners on the market, but very few have succeeded in maintaining a positive reputation with their clients. You can stand out with the aid of our analytics team. This includes identification and optimization of website elements such as meta tags, headings, URLs, and content to make them more search engine-friendly and improves ranking potential.
-                    Additionally, it entails the use of analytical tools to track website metrics and to gather data on their competitors in order to offer improvement strategies.
-                    </p>
-                    <button>KNOW MORE...</button>
-            </div>
-        </div>
-        <div class="backgrounds socialBg">
-            <div class="headingBgContainer">
-                <h1>SOCIAL MEDIA<br><span>MANAG</span>EMENT</h1>
-                <p>There are millions of fish in the sea, but we only know about a small portion of them. Similarly there are many business owners on the market, but very few have succeeded in maintaining a positive reputation with their clients. You can stand out with the aid of our analytics team. This includes identification and optimization of website elements such as meta tags, headings, URLs, and content to make them more search engine-friendly and improves ranking potential.
-                    Additionally, it entails the use of analytical tools to track website metrics and to gather data on their competitors in order to offer improvement strategies.
-                    </p>
-                    <button>KNOW MORE...</button>
-            </div>
-        </div>
     </div>
     <div class="contentLayer">
         <div id="contentParts">
             <img src="img/WebDPortrait.svg" alt="" class="carouselImgs">
-            <img src="img/SocialPortrait.svg" alt="" class="carouselImgs">
+            <img src="img/SSMPortrait.svg" alt="" class="carouselImgs">
             <img src="img/GraphicsPortrait.svg" alt="" class="carouselImgs">
             <img src="img/BDPPortrait.svg" alt="" class="carouselImgs">
-            <img src="img/SSMPortrait.svg" alt="" class="carouselImgs">
+            <img src="img/SocialPortrait.svg" alt="" class="carouselImgs">
         </div>
     </div>
     <div class="runCarouselButtons">
@@ -282,11 +279,11 @@
         <input type="text" placeholder="Enter Your Email Address" id="email_id" name="email_id">
         <select name="service" id="service_name" name="service_name">
             <option value="select" disabled selected>Select</option>
-            <option value="social">Social Media</option>
-            <option value="graphic">Graphic Designing</option>
-            <option value="webd">Web Designing</option>
-            <option value="seo">SEO</option>
-            <option value="business">Business</option>
+            <option value="Social Media">Social Media</option>
+            <option value="Graphic Designing">Graphic Designing</option>
+            <option value="Web Designing">Web Designing</option>
+            <option value="SEO">SEO</option>
+            <option value="Business Development">Business Development</option>
         </select>
         <input type="text" placeholder="Message" id="message" name="message">
         <input type="Submit" placeholder="Submit" onclick="sendMessage();">
@@ -309,9 +306,9 @@
         <div class="footerSections">
             <h1> SOCIAL MEDIA </h1>
             <div id="socialLinks">
-                <a href=""><img src="img/instagram.png" alt=""></a>
-                <a href=""><img src="img/facebook.png" alt=""></a>
-                <a href=""><img src="img/twitter.png" alt=""></a>
+                <a href="https://instagram.com/virtuoboost?igshid=MzRlODBiNWFlZA=="><img src="img/instagram.png" alt=""></a>
+                <a href="http://facebook.com/VituoBoost"><img src="img/facebook.png" alt=""></a>
+                <a href="https://twitter.com/VirtuoBoost"><img src="img/twitter.png" alt=""></a>
             </div>
         </div>
         <div class="footerSections">
@@ -336,7 +333,74 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
+
+        function validateForm() {
+            var fromName = document.getElementById("from_name").value;
+            var email = document.getElementById("email_id").value;
+            var service = document.getElementById("service_name").value;
+            var message = document.getElementById("message").value;
+            var emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/; // Basic email validation pattern
+
+            if (fromName === "") {
+                swal({
+                    type: "error",
+                    title: "Error",
+                    text: "Please Enter Your Name",
+                    //buttons: false,
+                    timer: 1200
+                })
+                //alert("Please enter your name.");
+                return false;
+            }
+
+            if (!email.match(emailPattern)) {
+                swal({
+                    type: "error",
+                    title: "Error",
+                    text: "Please Enter A Valid Email Address",
+                    //buttons: false,
+                    timer: 1200
+                })
+                return false;
+            } else {
+                document.getElementById("email_id").classList.remove("error");
+            }
+
+            if (service === "select" || service === "") {
+                swal({
+                    type: "error",
+                    title: "Error",
+                    text: "Please Select A Service",
+                    //buttons: false,
+                    timer: 1200
+                })
+                return false;
+            }
+
+            if (message === "") {
+                swal({
+                    type: "error",
+                    title: "Error",
+                    text: "Please Enter A Message",
+                    //buttons: false,
+                    timer: 1200
+                });
+                return false;
+            }
+
+            // Additional validations can be added here
+
+            return true;
+        }
+
+        /*function sendMessage() {
+            if (validateForm()) {
+                alert("Form submitted successfully.");
+            }
+        }*/
+
         function sendMessage(){
+            if (validateForm()) {
             (function(){
                 emailjs.init("N3aHZ2QKAsmJjBlJn");
             })();
@@ -363,6 +427,7 @@
                 localStorage.setItem('serviceName','');
             })
             .catch();
+        }
 
         }
     </script>
