--- a/index.html
+++ b/index.html
@@ -78,37 +78,37 @@
     </div>
     <div id="contentText" class="reveal">
         <p>Empowering Digital Dreams, Elevating Online Realities - Welcome to Virtuo Boost, Where Ideas Soar and Success Takes Flight!</p>
-        <p>Virtuo Boost: Unleashing digital potential with a creative edge. We breathe life into ideas, offering web development, marketing, and graphic design services to elevate your online presence and drive success <br><button style="text-align: center;">About us</button></p>
+        <p>Virtuo Boost: Unleashing digital potential with a creative edge. We breathe life into ideas, offering web development, marketing, and graphic design services to elevate your online presence and drive success <br><a href="aboutus.html" style="text-decoration: none;"><button style="text-align: center;">About us</button></a></p>
     </div>
     <!-- <img src="img/banner1.jpg" alt=""> -->
 </section>
 <section id="introPage" class="reveal">
     <div class="element">
-        <img src="img/design3.jpg" alt="">
+        <img src="img/3.png" alt="">
         <div class="text-div">
             <h1>Stunning</h1>
             <h1>Experiences</h1>
         </div>
         <!-- <img src="img/banner1.3.jpg" alt=""> -->
-    <video src="img/design.mp4" loop autoplay muted></video>
+    <video src="img/stunning.mp4" loop autoplay muted></video>
     </div>
     <div class="element">
-        <video src="img/creativeVideo.mp4" loop autoplay muted style="left: 0; width: 30%;" ></video>
+        <video src="img/style.mp4" loop autoplay muted style="left: 0; width: 30%;" ></video>
         <!-- <img src="img/banner1.2.jpg" alt=""> -->
         <div class="text-div">
             <h1 id="secondText">Striking</h1>
             <h1 style="color: lightblue;">Creativity</h1>
         </div>
-        <img src="img/creative.jpg" alt="">
+        <img src="img/2.png" alt="">
     </div>
     <div class="element">
-        <img src="img/design3.jpg" alt="">
+        <img src="img/1.png" alt="">
         <div class="text-div">
             <h1>Aesthetic</h1>
             <h1 style="color: lightsalmon;">Realities</h1>
         </div>
         <!-- <img src="img/banner1.3.jpg" alt=""> -->
-        <video src="img/design.mp4" loop autoplay muted id="thirdVideo"></video>
+        <video src="img/exp.mp4" loop autoplay muted id="thirdVideo"></video>
     
     </div>
 </section>
