--- a/services/services.html
+++ b/services/services.html
@@ -133,7 +133,7 @@
             </div>
             <div class="seperateServiceasection reveal" id="searchEO">
                 <h1>Search Engine<span style=" font-family: 'Orbitron', sans-serif; color: lightcoral;">  optimization</span></h1>
-                <img src="../img/deal.png" alt="">
+                <img src="../img/seo.png" alt="">
                 <!-- <p>social media is perhaps the easiest but trickiest method for a business to grow. Some team members at Virtuo Boost have perfected the art of increasing customer loyalty, brand recognition, and social media presence while also generating income. </p> -->
                 <a href="#" class="neon-button" style="width: 50%;" onclick="getService('business')">GET SERVICE</a>
             
