--- a/aboutus.html
+++ b/aboutus.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <!-- <div class="lowerFooter">
-               
+            Credit:<a href="https://www.flaticon.com/free-icons/seo" title="seo icons">Seo icons created by Freepik - Flaticon</a>   
             </div> -->
         </section>
 </body>
