--- a/contactus.html
+++ b/contactus.html
@@ -29,12 +29,12 @@
             <input type="text" placeholder="Enter Your Name"  id="from_name" name="from_name">
             <input type="text" placeholder="Enter Your Email Address" id="email_id" name="email_id">
             <select name="service" id="service_name" name="service_name">
-                <option value="select" disabled selected>Select</option>
-                <option value="social">Social Media</option>
-                <option value="graphic">Graphic Designing</option>
-                <option value="webd">Web Designing</option>
-                <option value="seo">SEO</option>
-                <option value="business">Business</option>
+            <option value="select" disabled selected>Select</option>
+            <option value="Social Media">Social Media</option>
+            <option value="Graphic Designing">Graphic Designing</option>
+            <option value="Web Designing">Web Designing</option>
+            <option value="SEO">SEO</option>
+            <option value="Business Development">Business Development program</option>
             </select>
             <input type="text" placeholder="Message" id="message" name="message">
             <input type="Submit" placeholder="Submit" onclick="sendMessage();">
@@ -130,7 +130,7 @@
                 return false;
             }
 
-            if (message === "") {
+            /*if (message === "") {
                 swal({
                     type: "error",
                     title: "Error",
@@ -139,7 +139,7 @@
                     timer: 1200
                 });
                 return false;
-            }
+            }*/
 
             // Additional validations can be added here
 
