--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <option value="Graphic Designing">Graphic Designing</option>
             <option value="Web Designing">Web Designing</option>
             <option value="SEO">SEO</option>
-            <option value="Business Development">Business Development</option>
+            <option value="Business Development">Business Development program</option>
         </select>
         <input type="text" placeholder="Message" id="message" name="message">
         <input type="Submit" placeholder="Submit" onclick="sendMessage();">
@@ -377,7 +377,7 @@
                 return false;
             }
 
-            if (message === "") {
+            /*if (message === "") {
                 swal({
                     type: "error",
                     title: "Error",
@@ -386,7 +386,7 @@
                     timer: 1200
                 });
                 return false;
-            }
+            }*/
 
             // Additional validations can be added here
 
